--- a/po/bn_IN.po
+++ b/po/bn_IN.po
@@ -3,44 +3,44 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-11 00:21+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-10-15 06:58+0200\n"
+"Last-Translator: Sankarshan <sankarshan.mukhopadhyay@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: bn_IN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../data/ui/app-chooser.glade.h:1
 msgid "Choose An Application"
-msgstr ""
+msgstr "একটি অ্যাপ্লিকেশন বেছে নিন"
 
 #: ../data/ui/app-chooser.glade.h:2
 msgid "<b>File Type To be Opened:</b>"
-msgstr ""
+msgstr "<b>যে প্রকারের ফাইল খোলা হবে:</b>"
 
 #: ../data/ui/app-chooser.glade.h:3
 msgid "_Installed Application"
-msgstr ""
+msgstr "ইনস্টল করা অ্যাপ্লিকেশন(_I)"
 
 #: ../data/ui/app-chooser.glade.h:4
 msgid "<b>Command line to execute:</b>"
-msgstr ""
+msgstr "<b>কমান্ড লাইনে চালানো:</b>"
 
 #: ../data/ui/app-chooser.glade.h:5
 msgid "_Browse"
-msgstr ""
+msgstr "দেখে নিন(_B)"
 
 #: ../data/ui/app-chooser.glade.h:6
 msgid "_Execute in terminal emulator"
-msgstr ""
+msgstr "টার্মিনাল এমুলেটর-এ চালিয়ে নিন(_E)"
 
 #: ../data/ui/app-chooser.glade.h:8
 #, no-c-format
@@ -54,28 +54,28 @@ msgstr ""
 
 #: ../data/ui/app-chooser.glade.h:13
 msgid "_Custom Command Line"
-msgstr ""
+msgstr "বিশেষ কমান্ড লাইন(_C)"
 
 #: ../data/ui/app-chooser.glade.h:14
 msgid "_Set selected application as default action of this file type"
-msgstr ""
+msgstr "এই প্রকারের ফাইলের জন্য নির্বাচিত অ্যাপ্লিকেশনকে ডিফল্ট করে নিন(_S)"
 
 #: ../data/ui/ask-rename.glade.h:1
 msgid "Confirm to replace files"
-msgstr ""
+msgstr "ফাইল প্রতিস্থাপন নিশ্চিত করুন"
 
 #: ../data/ui/ask-rename.glade.h:2
 msgid "_Skip"
-msgstr ""
+msgstr "বাদ দিয়ে এগিয়ে চলুন(_S)kip"
 
 #: ../data/ui/ask-rename.glade.h:3 ../src/gtk/fm-file-menu.c:163
 #: ../src/gtk/fm-folder-view.c:185
 msgid "_Rename"
-msgstr ""
+msgstr "নূতন নামকরণ করুন(_R)"
 
 #: ../data/ui/ask-rename.glade.h:4
 msgid "_Overwrite"
-msgstr ""
+msgstr "মুছে ফেলে নূতন নামকরণ করুন(_O)"
 
 #: ../data/ui/ask-rename.glade.h:5
 msgid ""
