--- a/po/ko.po
+++ b/po/ko.po
@@ -9,9 +9,9 @@ msgstr ""
 "Project-Id-Version: libfm.master\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-11 00:21+0200\n"
-"PO-Revision-Date: 2012-09-06 22:23+0900\n"
+"PO-Revision-Date: 2012-10-16 17:26+0900\n"
 "Last-Translator: Seong-ho Cho <darkcircle.0426@gmail.com>\n"
-"Language-Team: \n"
+"Language-Team: Seong-ho Cho <darkcircle.0426@gmail.com>\n"
 "Language: ko\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -28,9 +28,8 @@ msgid "<b>File Type To be Opened:</b>"
 msgstr "<b>열 파일의 유형:</b>"
 
 #: ../data/ui/app-chooser.glade.h:3
-#, fuzzy
 msgid "_Installed Application"
-msgstr "설치한 프로그램"
+msgstr "설치한 프로그램(_I)"
 
 #: ../data/ui/app-chooser.glade.h:4
 msgid "<b>Command line to execute:</b>"
@@ -41,9 +40,8 @@ msgid "_Browse"
 msgstr "찾아보기(_B)"
 
 #: ../data/ui/app-chooser.glade.h:6
-#, fuzzy
 msgid "_Execute in terminal emulator"
-msgstr "터미널 에뮬레이터에서 실행"
+msgstr "터미널 에뮬레이터에서 실행(_E)"
 
 #: ../data/ui/app-chooser.glade.h:8
 #, no-c-format
@@ -61,14 +59,12 @@ msgstr ""
 " <b>%U</b>: 여러 개의 URI를 나타냅니다"
 
 #: ../data/ui/app-chooser.glade.h:13
-#, fuzzy
 msgid "_Custom Command Line"
-msgstr "사용자 정의 명령 줄"
+msgstr "사용자 정의 명령줄(_C)"
 
 #: ../data/ui/app-chooser.glade.h:14
-#, fuzzy
 msgid "_Set selected application as default action of this file type"
-msgstr "선택한 프로그램을 이 프로그램의 기본 동작으로 설정"
+msgstr "선택한 프로그램을 이 프로그램의 기본 동작으로 설정(_S)"
 
 #: ../data/ui/ask-rename.glade.h:1
 msgid "Confirm to replace files"
@@ -78,7 +74,8 @@ msgstr "파일을 바꾸기 위해 확인"
 msgid "_Skip"
 msgstr "건너뛰기(_S)"
 
-#: ../data/ui/ask-rename.glade.h:3 ../src/gtk/fm-file-menu.c:163
+#: ../data/ui/ask-rename.glade.h:3
+#: ../src/gtk/fm-file-menu.c:163
 #: ../src/gtk/fm-folder-view.c:185
 msgid "_Rename"
 msgstr "이름 바꾸기(_R)"
@@ -102,14 +99,12 @@ msgid "with the following file?"
 msgstr "다음 파일에 대해 적용하시겠습니까?"
 
 #: ../data/ui/ask-rename.glade.h:9
-#, fuzzy
 msgid "_File Name:"
-msgstr "파일 이름:"
+msgstr "파일 이름(_F):"
 
 #: ../data/ui/ask-rename.glade.h:10
-#, fuzzy
 msgid "_Apply this option to all existing files"
-msgstr "모든 존재하는 파일에 이 옵션 적용"
+msgstr "모든 존재하는 파일에 이 옵션 적용(_A)"
 
 #: ../data/ui/file-prop.glade.h:1
 msgid "File Properties"
@@ -156,29 +151,24 @@ msgid "_General"
 msgstr "일반(_G)"
 
 #: ../data/ui/file-prop.glade.h:12
-#, fuzzy
 msgid "<b>O_wner:</b>"
-msgstr "<b>소유자:</b>"
+msgstr "<b>소유자(_W):</b>"
 
 #: ../data/ui/file-prop.glade.h:13
-#, fuzzy
 msgid "<b>G_roup:</b>"
-msgstr "<b>그룹:</b>"
+msgstr "<b>그룹(_R):</b>"
 
 #: ../data/ui/file-prop.glade.h:14
-#, fuzzy
 msgid "<b>_View content:</b>"
-msgstr "<b>내용 보기:</b>"
+msgstr "<b>내용 보기(_V):</b>"
 
 #: ../data/ui/file-prop.glade.h:15
-#, fuzzy
 msgid "<b>C_hange content:</b>"
-msgstr "<b>내용 바꾸기:</b>"
+msgstr "<b>내용 바꾸기(_H):</b>"
 
 #: ../data/ui/file-prop.glade.h:16
-#, fuzzy
 msgid "<b>_Execute:</b>"
-msgstr "<b>실행:</b>"
+msgstr "<b>실행(_E):</b>"
 
 #: ../data/ui/file-prop.glade.h:17
 msgid "<b>Special bits:</b>"
@@ -283,7 +273,8 @@ msgstr "<b>남은 시간:</b>"
 msgid "<b>Some errors occurred:</b>"
 msgstr "<b>오류 발생:</b>"
 
-#: ../data/ui/preferred-apps.glade.h:1 ../data/libfm-pref-apps.desktop.in.h:1
+#: ../data/ui/preferred-apps.glade.h:1
+#: ../data/libfm-pref-apps.desktop.in.h:1
 msgid "Preferred Applications"
 msgstr "기본 프로그램"
 
@@ -300,12 +291,8 @@ msgid "<b>Mail client</b>"
 msgstr "<b>메일 클라이언트</b>"
 
 #: ../data/ui/preferred-apps.glade.h:5
-msgid ""
-"The preferred Mail Client will be used to compose emails when you click on E-"
-"mail addresses."
-msgstr ""
-"이메일 주소를 눌렀을 때 메일을 작성할 때 기본으로 사용할 기본 메일 클라이언"
-"트 입니다."
+msgid "The preferred Mail Client will be used to compose emails when you click on E-mail addresses."
+msgstr "이메일 주소를 눌렀을 때 메일을 작성할 때 기본으로 사용할 기본 메일 클라이언트 입니다."
 
 #: ../data/ui/preferred-apps.glade.h:6
 msgid "<b>Terminal Emulator</b>"
@@ -333,151 +320,143 @@ msgstr "터미널에서 실행(_T)"
 
 #: ../data/ui/filesearch.glade.h:1
 msgid "Bytes"
-msgstr ""
+msgstr "바이트"
 
-#: ../data/ui/filesearch.glade.h:2 ../src/base/fm-utils.c:88
+#: ../data/ui/filesearch.glade.h:2
+#: ../src/base/fm-utils.c:88
 msgid "KB"
 msgstr "KB"
 
-#: ../data/ui/filesearch.glade.h:3 ../src/base/fm-utils.c:93
+#: ../data/ui/filesearch.glade.h:3
+#: ../src/base/fm-utils.c:93
 msgid "MB"
 msgstr "MB"
 
-#: ../data/ui/filesearch.glade.h:4 ../src/base/fm-utils.c:98
+#: ../data/ui/filesearch.glade.h:4
+#: ../src/base/fm-utils.c:98
 msgid "GB"
 msgstr "GB"
 
 #: ../data/ui/filesearch.glade.h:5
 msgid "Choose a date"
-msgstr ""
+msgstr "날짜 선택"
 
 #: ../data/ui/filesearch.glade.h:6
 msgid "Choose a date from the following calendar"
-msgstr ""
+msgstr "다음 달력에서 날짜를 선택하십시오"
 
 #: ../data/ui/filesearch.glade.h:7
-#, fuzzy
 msgid "Search Files"
-msgstr "파일 정렬(_S)"
+msgstr "파일 검색"
 
 #: ../data/ui/filesearch.glade.h:8
-#, fuzzy
 msgid "<b>File _Name Patterns</b>"
-msgstr "<b>파일 유형:</b>"
+msgstr "<b>파일 이름 패턴(_N)</b>"
 
 #: ../data/ui/filesearch.glade.h:9
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: ../data/ui/filesearch.glade.h:10
 msgid "Case insensiti_ve"
-msgstr ""
+msgstr "대소문자 구별 안함(_V)"
 
 #: ../data/ui/filesearch.glade.h:11
 msgid "_Use regular expression"
-msgstr ""
+msgstr "정규표현식 사용(_U)"
 
 #: ../data/ui/filesearch.glade.h:12
 msgid "<b>Places to Search</b>"
-msgstr ""
+msgstr "<b>검색 위치</b>"
 
 #: ../data/ui/filesearch.glade.h:13
 msgid "_Search in sub directories"
-msgstr ""
+msgstr "하위 디렉터리 검색(_S)"
 
 #: ../data/ui/filesearch.glade.h:14
 msgid "Search _hidden files"
-msgstr ""
+msgstr "숨겨진 파일 검색(_H)"
 
 #: ../data/ui/filesearch.glade.h:15
 msgid "Name/_Location"
-msgstr ""
+msgstr "이름/위치(_L)"
 
 #: ../data/ui/filesearch.glade.h:16
-#, fuzzy
 msgid "<b>File Type</b>"
-msgstr "<b>파일 유형:</b>"
+msgstr "<b>파일 형식</b>"
 
 #: ../data/ui/filesearch.glade.h:17
 msgid "Only search for files of following types"
-msgstr ""
+msgstr "다음 형식의 파일만 검색"
 
 #: ../data/ui/filesearch.glade.h:18
-#, fuzzy
 msgid "Te_xt files"
-msgstr "파일 살제중"
+msgstr "텍스트 파일(_X)"
 
 #: ../data/ui/filesearch.glade.h:19
-#, fuzzy
 msgid "_Image files"
-msgstr "휴지통으로 파일 옮기는 중"
+msgstr "그림 파일(_I)"
 
 #: ../data/ui/filesearch.glade.h:20
-#, fuzzy
 msgid "_Audio files"
-msgstr "파일 정렬(_S)"
+msgstr "오디오 파일(_A)"
 
 #: ../data/ui/filesearch.glade.h:21
-#, fuzzy
 msgid "_Video files"
-msgstr "파일 정렬(_S)"
+msgstr "동영상 파일(_V)"
 
 #: ../data/ui/filesearch.glade.h:22
 msgid "_Documents"
-msgstr ""
+msgstr "문서(_D)"
 
 #: ../data/ui/filesearch.glade.h:23
-#, fuzzy
 msgid "File _Type"
-msgstr "파일 유형순(_T)"
+msgstr "파일 형식(_T)"
 
 #: ../data/ui/filesearch.glade.h:24
-#, fuzzy
 msgid "<b>File Contain_s</b>"
-msgstr "<b>디스크상 용량:</b>"
+msgstr "<b>파일 내용(_S)</b>"
 
 #: ../data/ui/filesearch.glade.h:25
 msgid "C_ontent"
-msgstr ""
+msgstr "내용(_O)"
 
 #: ../data/ui/filesearch.glade.h:26
-#, fuzzy
 msgid "<b>File Size</b>"
-msgstr "<b>파일 유형:</b>"
+msgstr "<b>파일 용량</b>"
 
 #: ../data/ui/filesearch.glade.h:27
 msgid "_Smaller than:"
-msgstr ""
+msgstr "다음보다 작은 것(_S):"
 
 #: ../data/ui/filesearch.glade.h:28
 msgid "_Bigger than:"
-msgstr ""
+msgstr "다음보다 큰 것(_B):"
 
 #: ../data/ui/filesearch.glade.h:29
-#, fuzzy
 msgid "<b>Last Modified Time</b>"
-msgstr "<b>최종 수정:</b>"
+msgstr "<b>최종 수정 일시</b>"
 
-#: ../data/ui/filesearch.glade.h:30 ../src/gtk/fm-gtk-file-launcher.c:531
+#: ../data/ui/filesearch.glade.h:30
+#: ../src/gtk/fm-gtk-file-launcher.c:531
 #: ../src/gtk/fm-gtk-file-launcher.c:538
-#, fuzzy
 msgid "(None)"
-msgstr "없음"
+msgstr "(없음)"
 
 #: ../data/ui/filesearch.glade.h:31
 msgid "_Earlier than:"
-msgstr ""
+msgstr "다음보다 먼저 만들어진 것(_E):"
 
 #: ../data/ui/filesearch.glade.h:32
 msgid "L_ater than:"
-msgstr ""
+msgstr "다음보다 늦게 만들어진 것(_A):"
 
 #: ../data/ui/filesearch.glade.h:33
-#, fuzzy
 msgid "_Properties"
-msgstr "파일 속성"
+msgstr "속성(_P)"
 
-#: ../src/base/fm-utils.c:80 ../src/base/fm-utils.c:111
+#: ../src/base/fm-utils.c:80
+#: ../src/base/fm-utils.c:111
 #, c-format
 msgid "%u byte"
 msgid_plural "%u bytes"
@@ -503,7 +482,8 @@ msgstr "GiB"
 msgid "TiB"
 msgstr "TiB"
 
-#: ../src/base/fm-path.c:841 ../src/gtk/fm-places-model.c:624
+#: ../src/base/fm-path.c:841
+#: ../src/gtk/fm-places-model.c:624
 msgid "Trash Can"
 msgstr "휴지통"
 
@@ -527,7 +507,8 @@ msgstr "마운트 지점"
 msgid ": "
 msgstr ": "
 
-#: ../src/gtk/fm-progress-dlg.c:234 ../src/gtk/fm-progress-dlg.c:253
+#: ../src/gtk/fm-progress-dlg.c:234
+#: ../src/gtk/fm-progress-dlg.c:253
 #, c-format
 msgid ""
 "Type: %s\n"
@@ -538,7 +519,8 @@ msgstr ""
 "크기: %s\n"
 "수정: %s"
 
-#: ../src/gtk/fm-progress-dlg.c:241 ../src/gtk/fm-progress-dlg.c:260
+#: ../src/gtk/fm-progress-dlg.c:241
+#: ../src/gtk/fm-progress-dlg.c:260
 #, c-format
 msgid ""
 "Type: %s\n"
@@ -565,12 +547,10 @@ msgstr "완료함"
 
 #: ../src/gtk/fm-progress-dlg.c:363
 msgid ""
-"Some files cannot be moved to trash can because the underlying file systems "
-"don't support this operation.\n"
+"Some files cannot be moved to trash can because the underlying file systems don't support this operation.\n"
 "Do you want to delete them instead?"
 msgstr ""
-"파일 시스템에서 근본적으로 이 동작을 지원하지 않아 휴키동으로 일부 파일을 이"
-"동할 수 없습니다.\n"
+"파일 시스템에서 근본적으로 이 동작을 지원하지 않아 휴키동으로 일부 파일을 이동할 수 없습니다.\n"
 "대신 삭제하시겠습니까?"
 
 #: ../src/gtk/fm-progress-dlg.c:482
@@ -601,7 +581,8 @@ msgstr "심볼릭 링크 만드는 중"
 msgid "Changing file attributes"
 msgstr "파일 속성 변경 중"
 
-#: ../src/gtk/fm-file-properties.c:161 ../src/gtk/fm-file-properties.c:170
+#: ../src/gtk/fm-file-properties.c:161
+#: ../src/gtk/fm-file-properties.c:170
 msgid "byte"
 msgid_plural "bytes"
 msgstr[0] "바이트"
@@ -616,14 +597,12 @@ msgstr "유효한 그룹 이름이나 번호 ID를 입력하여 주십시오."
 
 #. FIXME: may special bits and exec flags still be messed up?
 #: ../src/gtk/fm-file-properties.c:453
-msgid ""
-"Do you want to recursively apply these changes to all files and sub-folders?"
+msgid "Do you want to recursively apply these changes to all files and sub-folders?"
 msgstr "모든 파일과 하위 폴더에 대해 바뀔 내용을 재귀적으로 적용하시겠습니까?"
 
 #: ../src/gtk/fm-file-properties.c:633
-#, fuzzy
 msgid "<b>_Access content:</b>"
-msgstr "<b>내용 접근:</b>"
+msgstr "<b>내용 접근(_A):</b>"
 
 #: ../src/gtk/fm-file-properties.c:748
 msgid "Files of different types"
@@ -641,37 +620,31 @@ msgstr "데스크톱"
 msgid "Applications"
 msgstr "프로그램"
 
-# 동직
+# 동작
 #: ../src/gtk/fm-places-view.c:101
-#, fuzzy
 msgid "_Mount Volume"
-msgstr "볼륨 마운트"
+msgstr "볼륨 마운트(_M)"
 
-# 동직
+# 동작
 #: ../src/gtk/fm-places-view.c:102
-#, fuzzy
 msgid "_Unmount Volume"
-msgstr "볼륨 마운트 해제"
+msgstr "볼륨 마운트 해제(_U)"
 
 #: ../src/gtk/fm-places-view.c:103
-#, fuzzy
 msgid "_Eject Removable Media"
-msgstr "이동식 미디어 꺼내기"
+msgstr "이동식 미디어 꺼내기(_E)"
 
 #: ../src/gtk/fm-places-view.c:116
-#, fuzzy
 msgid "_Rename Bookmark Item"
-msgstr "북마크 항목 이름 바꾸기"
+msgstr "북마크 항목 이름 바꾸기(_R)"
 
 #: ../src/gtk/fm-places-view.c:117
-#, fuzzy
 msgid "Re_move from Bookmark"
-msgstr "북마크에서 제거"
+msgstr "북마크에서 제거(_M)"
 
 #: ../src/gtk/fm-places-view.c:129
-#, fuzzy
 msgid "_Empty Trash Can"
-msgstr "휴지통 비우기"
+msgstr "휴지통 비우기(_E)"
 
 #. FIXME: we need to set a proper parent window for the dialog
 #: ../src/gtk/fm-places-view.c:868
@@ -684,22 +657,19 @@ msgstr "새 이름을 입력하십시오:"
 
 #: ../src/gtk/fm-side-pane.c:61
 msgid "_Off"
-msgstr ""
+msgstr "끄기(_O)"
 
 #: ../src/gtk/fm-side-pane.c:62
-#, fuzzy
 msgid "_Places"
-msgstr "위치"
+msgstr "위치(_P)"
 
 #: ../src/gtk/fm-side-pane.c:63
-#, fuzzy
 msgid "_Directory Tree"
-msgstr "디렉터리 트리"
+msgstr "디렉터리 트리(_D)"
 
 #: ../src/gtk/fm-side-pane.c:64
-#, fuzzy
 msgid "_Remote"
-msgstr "원격"
+msgstr "원격(_R)"
 
 #: ../src/gtk/fm-side-pane.c:412
 msgid "Places"
@@ -711,43 +681,38 @@ msgstr "디렉터리 트리"
 
 #: ../src/gtk/fm-file-menu.c:156
 msgid "_Open"
-msgstr ""
+msgstr "열기(_O)"
 
-#: ../src/gtk/fm-file-menu.c:157 ../src/gtk/fm-file-menu.c:158
-#, fuzzy
+#: ../src/gtk/fm-file-menu.c:157
+#: ../src/gtk/fm-file-menu.c:158
 msgid "Open _With..."
-msgstr "열기..."
+msgstr "다른 프로그램으로 열기(_W)..."
 
 #: ../src/gtk/fm-file-menu.c:164
-#, fuzzy
 msgid "Create _Symlink"
-msgstr "심볼릭 링크 만들기"
+msgstr "심볼릭 링크 만들기(_S)"
 
 #: ../src/gtk/fm-file-menu.c:165
-#, fuzzy
 msgid "Se_nd To"
-msgstr "보내기"
+msgstr "보내기(_N)"
 
 #: ../src/gtk/fm-file-menu.c:166
-#, fuzzy
 msgid "Co_mpress..."
-msgstr "압축..."
+msgstr "압축(_M)..."
 
 #: ../src/gtk/fm-file-menu.c:167
-#, fuzzy
 msgid "Extract _Here"
-msgstr "여기에 풀기"
+msgstr "여기에 풀기(_H)"
 
 #: ../src/gtk/fm-file-menu.c:168
-#, fuzzy
 msgid "E_xtract To..."
-msgstr "풀기..."
+msgstr "다음에 풀기(_X)..."
 
-#: ../src/gtk/fm-file-menu.c:169 ../src/gtk/fm-folder-view.c:186
+#: ../src/gtk/fm-file-menu.c:169
+#: ../src/gtk/fm-folder-view.c:186
 #: ../src/gtk/fm-folder-view.c:187
-#, fuzzy
 msgid "Prop_erties"
-msgstr "파일 속성"
+msgstr "속성(_E)"
 
 #: ../src/gtk/fm-file-menu.c:521
 msgid "_Restore"
@@ -802,23 +767,20 @@ msgid "Show _Hidden"
 msgstr "숨겨진 요소 보이기(_H)"
 
 #: ../src/gtk/fm-folder-view.c:197
-#, fuzzy
 msgid "_Only for this folder"
-msgstr "이 폴더에 대해서만"
+msgstr "이 폴더에 대해서만(_O)"
 
 #: ../src/gtk/fm-folder-view.c:198
 msgid "Check to remember sort as folder setting rather than global one"
 msgstr "전역 설정보다 폴더 설정에 따라 정렬하려면 표시하십시오"
 
 #: ../src/gtk/fm-folder-view.c:199
-#, fuzzy
 msgid "Mingle _files and folders"
-msgstr "파일 폴더 뒤섞기"
+msgstr "파일 및 폴더 뒤섞기(_F)"
 
 #: ../src/gtk/fm-folder-view.c:200
-#, fuzzy
 msgid "_Ignore name case"
-msgstr "이름 대소문자 무시"
+msgstr "이름 대소문자 무시(_I)"
 
 #: ../src/gtk/fm-folder-view.c:211
 msgid "By _Name"
@@ -868,7 +830,8 @@ msgstr "설치한 프로그램"
 msgid "Error"
 msgstr "오류"
 
-#: ../src/gtk/fm-gtk-utils.c:96 ../src/gtk/fm-gtk-utils.c:127
+#: ../src/gtk/fm-gtk-utils.c:96
+#: ../src/gtk/fm-gtk-utils.c:127
 msgid "Confirm"
 msgstr "확인"
 
@@ -921,18 +884,19 @@ msgstr "'%s'은(는) 실행 가능한 파일입니다. 실행하시겠습니까?
 #. show error if no paths are added
 #: ../src/gtk/fm-gtk-file-launcher.c:566
 msgid "No folders are specified."
-msgstr ""
+msgstr "지정한 폴더가 없습니다."
 
 #: ../src/gtk/fm-gtk-file-launcher.c:605
-#, fuzzy
 msgid "Select a folder"
 msgstr "폴더를 선택하여 주십시오"
 
-#: ../src/gtk/fm-dir-tree-model.c:418 ../src/gtk/fm-dir-tree-model.c:1204
+#: ../src/gtk/fm-dir-tree-model.c:418
+#: ../src/gtk/fm-dir-tree-model.c:1204
 msgid "<No Sub Folder>"
 msgstr "<하위 폴더 없음>"
 
-#: ../src/gtk/fm-dir-tree-model.c:420 ../src/gtk/fm-dir-tree-model.c:1205
+#: ../src/gtk/fm-dir-tree-model.c:420
+#: ../src/gtk/fm-dir-tree-model.c:1205
 msgid "Loading..."
 msgstr "불러오는 중..."
 
@@ -950,25 +914,23 @@ msgid "Size"
 msgstr "크기"
 
 #: ../src/gtk/fm-folder-model.c:188
-#, fuzzy
 msgid "Permissions"
-msgstr "권한(_P)"
+msgstr "권한"
 
 #: ../src/gtk/fm-folder-model.c:189
-#, fuzzy
 msgid "Owner"
-msgstr "소유자만"
+msgstr "소유자"
 
 #: ../src/gtk/fm-folder-model.c:190
 msgid "Modified"
 msgstr "수정"
 
 #: ../src/gtk/fm-folder-model.c:191
-#, fuzzy
 msgid "Location"
-msgstr "<b>위치:</b>"
+msgstr "위치"
 
-#: ../src/job/fm-dir-list-job.c:201 ../src/job/fm-dir-list-job.c:212
+#: ../src/job/fm-dir-list-job.c:201
+#: ../src/job/fm-dir-list-job.c:212
 #: ../src/job/fm-dir-list-job.c:307
 #, c-format
 msgid "The specified directory is not valid"
@@ -1015,11 +977,13 @@ msgstr "CD-RW 디스크"
 msgid "Blank CD-RW Disc"
 msgstr "빈 CD-RW 디스크"
 
-#: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
+#: ../src/udisks/g-udisks-device.c:44
+#: ../src/udisks/g-udisks-device.c:45
 msgid "DVD-ROM Disc"
 msgstr "DVD-ROM 디스크"
 
-#: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
+#: ../src/udisks/g-udisks-device.c:44
+#: ../src/udisks/g-udisks-device.c:45
 msgid "Blank DVD-ROM Disc"
 msgstr "빈 DVD-ROM 디스크"
 
@@ -1151,29 +1115,31 @@ msgstr "빈 광 디스크"
 msgid "Optical Disc"
 msgstr "광 디스크"
 
-#: ../src/vfs/fm-vfs-menu.c:324 ../src/vfs/fm-vfs-menu.c:586
+#: ../src/vfs/fm-vfs-menu.c:324
+#: ../src/vfs/fm-vfs-menu.c:586
 #: ../src/vfs/fm-vfs-menu.c:618
 msgid "Menu cache error"
-msgstr ""
+msgstr "메뉴 캐시 오류"
 
 #. ---- GFile implementation ----
-#: ../src/vfs/fm-vfs-menu.c:381 ../src/vfs/fm-vfs-search.c:896
+#: ../src/vfs/fm-vfs-menu.c:381
+#: ../src/vfs/fm-vfs-search.c:896
 msgid "Operation not supported"
-msgstr ""
+msgstr "동작을 지원하지 않습니다"
 
 #: ../src/vfs/fm-vfs-menu.c:552
 #, c-format
 msgid "Invalid filename %s"
-msgstr ""
+msgstr "%s 파일 이름이 잘못되었습니다"
 
 #: ../src/vfs/fm-vfs-menu.c:613
 msgid "Invalid menu directory"
-msgstr ""
+msgstr "메뉴 디렉터리가 잘못되었습니다"
 
 #. FIXME: need name to be converted to UTF-8?
 #: ../src/vfs/fm-vfs-search.c:959
 msgid "Search"
-msgstr ""
+msgstr "검색"
 
 #~ msgid "<b>_Owner:</b>"
 #~ msgstr "<b>소유자(_O):</b>"
