--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,8 @@ Changes on 1.2.0 since 1.1.0:
 
 * Context Menu on selected files now available by Shift+Menu keypress.
 
+* Implemented reordering bookmarks in Places View via context menu.
+
 
 Changes on 1.1.0 since 1.0.1:
 
