--- a/NEWS
+++ b/NEWS
@@ -27,6 +27,11 @@ Changes on 1.2.0 since 1.1.0:
 
 * Implemented reordering bookmarks in Places View via context menu.
 
+* Greatly improved accessibility on every widget.
+
+* Added an option 'Add to Bookmarks' into file context menu. Available
+    only if exactly one file is selected and that file is a directory.
+
 
 Changes on 1.1.0 since 1.0.1:
 
