--- a/NEWS
+++ b/NEWS
@@ -32,6 +32,8 @@ Changes on 1.2.0 since 1.1.0:
 * Added an option 'Add to Bookmarks' into file context menu. Available
     only if exactly one file is selected and that file is a directory.
 
+* Implemented dropping files onto Directory Tree View (sidebar) items.
+
 
 Changes on 1.1.0 since 1.0.1:
 
